--- a/src/components/css/NavbarUser.module.css
+++ b/src/components/css/NavbarUser.module.css
@@ -5,15 +5,14 @@
     justify-content: center;
     align-items: center;
     padding: 3px;
-
-    z-index: 5;
+    z-index: 3;
     box-shadow: 1px 1px 2px black;
     pointer-events: auto;
     border-radius: 50%;
     background: #ff0000;
     background: linear-gradient(90deg, rgba(255, 0, 0, 1) 0%, rgba(253, 175, 29, 1) 70%, rgba(249, 252, 69, 1) 100%);
     cursor: pointer;
-
+    position: relative;
 }
 
 .btnNavegacion {
