--- a/src/screens/modoCompacto/css/Trazado_compacto.module.css
+++ b/src/screens/modoCompacto/css/Trazado_compacto.module.css
@@ -51,6 +51,13 @@
 
 }
 
+.mensajePermiso {
+  color: red;
+  margin: 10px;
+  font-weight: bold;
+  font-size: 1.5rem;
+}
+
 .Container_secundario h3 {
   font-size: clamp(1rem, 2.5vw, 1.4rem); 
 }
