--- a/src/screens/marcadores/css/List.module.css
+++ b/src/screens/marcadores/css/List.module.css
@@ -27,23 +27,20 @@
 }
 
 .add_user button {
-    margin: 0 0 5px 5px;
-    padding: 10px;
+    padding: 5px 15px;
     color: #ffffff;
     background: linear-gradient(90deg, #ff0000, #ff6100);
     border-radius: 30px;
-    height: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
     border: none;
-    gap: 5px;
     cursor: pointer;
 }
 
 .filtros .buscar {
     display: flex;
-    justify-content: lef1;
+    justify-content: left;
 }
 
 .filtros .buscar {
@@ -79,9 +76,6 @@
     background-color: transparent;
 }
 
-.filtroCard:hover {
-    transform: scale(98%);
-}
 
 .card {
     display: flex;
@@ -137,6 +131,8 @@
 }
 
 .SubTitulo {
+    margin: auto;
+    max-width: 80%;
     text-align: center;
     color: gray;
     justify-items: center;
