--- a/src/screens/modoCompacto/css/Boton_Eventos.css
+++ b/src/screens/modoCompacto/css/Boton_Eventos.css
@@ -1,14 +1,7 @@
-:root {
-  --min-width: 320px;
-  --max-width: 1200px;
-  --min-font: 14px;
-  --max-font: 18px;
-}
-
 .contenedor_principal {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   gap: clamp(5px, 1vw, 15px);
   width: 100%;
   padding: clamp(5px, 2vw, 20px);
