--- a/src/screens/accesibilidades/css/List.module.css
+++ b/src/screens/accesibilidades/css/List.module.css
@@ -49,12 +49,17 @@
 
 .filtroCard {
     border: 1px solid gray;
-    padding: 2px 10px 2px 10px;
+    padding: 0px 10px 0px 10px;
     border-radius: 15px;
     font-size: 0.8rem;
     cursor: pointer;
     transition: 0.2s all;
     margin-bottom: 15px;
+    background-color: transparent;
+}
+
+.filtroCard select {
+    border: none;
     background-color: transparent;
 }
 
@@ -70,14 +75,6 @@
     margin-bottom: 15px;
     color: white;
     border: none;
-}
-
-.filtroCard form select {
-    border: none;
-}
-
-.filtroCard:hover {
-    transform: scale(98%);
 }
 
 .card {
