Agregue estilo y logotipo al contenedor del botón Atrás en la pantalla de inicio de sesión

--- a/src/screens/Login/loginUsuario.module.css
+++ b/src/screens/Login/loginUsuario.module.css
@@ -28,7 +28,12 @@
 
 .containeratras {
     padding: 25px;
+    display: flex;
+    justify-content: space-between;
+}
 
+.containeratras img {
+    width: 200px;
 }
 
 .containeratras .botonatras {
