--- a/src/screens/horarios/css/Ver.module.css
+++ b/src/screens/horarios/css/Ver.module.css
@@ -19,28 +19,20 @@
     overflow: hidden;
 }
 
-.imagen {
-    position: absolute;
-    top: 0;
-    left: 0;
+.header {
+    position: relative;
     width: 100%;
-    height: 100%;
-    z-index: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
-.imagen img {
+.header img {
+    z-index: 0;
     width: 100%;
-    height: 100%;
+    height: 40vh;
     object-fit: cover;
-    object-position: center;
-    max-width: 200vw;
+    filter: brightness(50%);
 }
 
 .header::before {
-    content: "";
     position: absolute;
     top: 0;
     left: 0;
@@ -74,13 +66,13 @@
 
 .locacionTitulo {
     position: absolute;
-    bottom: 25px;
+    bottom: 5px;
     width: 100%;
     padding-left: 25px;
     z-index: 3;
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 5px;
 }
 
 .locacionTitulo h4 {
@@ -424,53 +416,13 @@
 
 @media (max-width: 768px) {
     .header {
-        height: 250px;
+        height: 300px;
     }
     .titulo_locacion h2 {
         font-size: 2rem;
         font-weight: 500;
     }
-    .info_locacion h4 {
-        font-size: 1rem;
-        font-weight: 400;
-    }
     .contenido_reseña {
         max-width: 95%;
-    }
-}
-
-@media (max-width: 480px) {
-    .header {
-        height: 200px;
-    }
-    .inspeccionar_reseñas {
-        width: 100%;
-        height: 100%;
-    }
-    .titulo_locacion {
-        bottom: 70px;
-        left: 20px;
-    }
-    .titulo_locacion h2 {
-        font-size: 1.5rem;
-        font-weight: 400;
-        letter-spacing: 0.2px;
-        line-height: 1.3;
-    }
-    .info_locacion {
-        bottom: 45px;
-        left: 20px;
-    }
-    .info_locacion h4 {
-        font-size: 1.1rem;
-        font-weight: 300;
-        letter-spacing: 0.5px;
-    }
-    .text {
-        bottom: 15px;
-        left: 20px;
-    }
-    .text h2 {
-        font-size: 0.9rem;
     }
 }
